--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "entities": "~1.1.1",
     "linkify-it": "^2.0.0",
     "mdurl": "^1.0.1",
-    "uc.micro": "^1.0.1"
+    "uc.micro": "^1.0.3"
   },
   "devDependencies": {
     "ansi": "~0.3.0",
     "autolinker": "^0.18.1",
-    "autoprefixer-stylus": "~0.9.2",
+    "autoprefixer-stylus": "~0.10.0",
     "benchmark": "~2.1.0",
     "browserify": "*",
     "chai": "^3.4.1",
@@ -42,9 +42,9 @@
     "coveralls": "~2.11.9",
     "eslint": "~2.13.0",
     "highlight.js": "^9.2.0",
-    "istanbul": "*",
+    "istanbul": "^0.4.5",
     "jade": "~1.11.0",
-    "markdown-it-abbr": "^1.0.2",
+    "markdown-it-abbr": "^1.0.4",
     "markdown-it-container": "^2.0.0",
     "markdown-it-deflist": "^2.0.0",
     "markdown-it-emoji": "^1.1.1",
@@ -57,8 +57,8 @@
     "markdown-it-testgen": "~0.1.3",
     "marked": "0.3.5",
     "mocha": "*",
-    "ndoc": "^4.0.0",
+    "ndoc": "^5.0.0",
     "stylus": "~0.54.2",
-    "uglify-js": "*"
+    "uglify-js": "^2.7.3"
   }
 }
