--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "chai": "^3.4.1",
     "commonmark": "~0.25.0",
     "coveralls": "~2.11.9",
-    "eslint": "~2.13.0",
+    "eslint": "^3.5.0",
     "highlight.js": "^9.2.0",
     "istanbul": "^0.4.5",
     "jade": "~1.11.0",
