--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "uc.micro": "^1.0.3"
   },
   "devDependencies": {
-    "ansi": "~0.3.0",
-    "autoprefixer-stylus": "~0.10.0",
+    "ansi": "^0.3.0",
+    "autoprefixer-stylus": "^0.11.0",
     "benchmark": "~2.1.0",
     "browserify": "*",
     "chai": "^3.4.1",
